decks slightly broken

--- a/clients/sender/controllers/main/main.html
+++ b/clients/sender/controllers/main/main.html
@@ -98,7 +98,7 @@
       <button ng-click="cancelDelete()" class="mdl-button mdl-js-button mdl-js-ripple-effect">
         Cancel
       </button>
-      <button ng-click="deleteCard(currentCard)" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
+      <button ng-click="deleteDeck(currentDeck)" class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
         Delete
       </button>
     </div>
