deck view rendering

--- a/clients/sender/controllers/main/main.html
+++ b/clients/sender/controllers/main/main.html
@@ -34,7 +34,8 @@
       <div class="mdl-card__supporting-text">{{ card.card }}</div>
 
       <div class="mdl-card__actions mdl-card--border">
-        <a href="#!/edit/{{ card._id }}"><button class="mdl-button mdl-js-button mdl-js-ripple-effect">Edit</button></a>
+
+        <a href="#!/decks/"><button class="mdl-button mdl-js-button mdl-js-ripple-effect">Edit</button></a>
         <input type="button" value="Delete" class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="warnDelete(card)"/>
 
         <!-- Displays 'Cast' with associated behavior for all cards not being casted -->
