Outline crude layout for the deck editor

--- a/clients/sender/controllers/deck/deck.html
+++ b/clients/sender/controllers/deck/deck.html
@@ -1,76 +1,51 @@
 <!-- Bootstrap Grid -->
-<div class="row">
-  <div class="col-xs-12">
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
 
-    <!-- Top Navigation Card - Material Design Lite -->
-    <div class="card-deck mdl-card mdl-shadow--4dp">
+      <!-- Top Navigation Card - Material Design Lite -->
+      <div class="card-deck mdl-card mdl-shadow--4dp">
 
-      <div class="mdl-card__title">
-        <h1 class="mdl-card__title-text">
-          Edit Card
-          <button ng-click="goToDeck()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">My Deck</button>
-          <button ng-click="logout()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Logout</button>
-        </h1>
-      </div>
+        <div class="mdl-card__title">
+          <h1 class="mdl-card__title-text">
+            Edit Deck
+            <button ng-click="shareDeck()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Share</button>
+            <button ng-click="goToDeck()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">My Deck</button>
+            <button ng-click="logout()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Logout</button>
+          </h1>
+        </div>
 
-      <div class="mdl-card__supporting-text">
-        <p>This is where you can edit your card. Change your markdown in the text box below and use the interactive preview to see how your card will look. After you are done press save and then cast away! To learn more about markdown, visit this <a href="http://commonmark.org/help/">link</a>.</p>
       </div>
 
     </div>
-
   </div>
-</div>
 
 
-<div class="row">
-  <div class="new-card col-md-6">
-
-    <!-- Card Editor -->
-    <div class="mdl-card mdl-shadow--4dp">
-
-      <form ng-submit="updateCard()">
-
-        <div class="mdl-card__supporting-text">
-
-          <div class="mdl-textfield mdl-js-textfield">
-            <input class="mdl-textfield__input" ng-model="card.title" type="text" id="edit-card-title">
-            <label class="mdl-textfield__label" for="edit-card-title"></label>
-          </div>
-
-          <div class="text-area mdl-textfield mdl-js-textfield">
-            <textarea name="message"
-                      class="mdl-textfield__input"
-                      ng-model="card.card"
-                      ng-change="changes()"
-                      id="edit-card-markdown"></textarea>
-            <label class="mdl-textfield__label" for="edit-card-markdown"></label>
-          </div>
-
+  <div class="row">
+    <div class="col-md-6">
+      <div ng-repeat="card in deck" class="card mdl-card mdl-shadow--4dp">
+        <div class="mdl-card__title">
+          <h3 class="mdl-card__title-text">{{ card.title }}</h3>
         </div>
-
         <div class="mdl-card__actions mdl-card--border">
-          <button ng-click="goToDeck()" type="button" class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect">Cancel</button>
-          <input class="mdl-button mdl-button--accent mdl-button--raised mdl-js-button mdl-js-ripple-effect"
-                 type="submit"
-                 value="Save"/>
+
+          <a href="#!/deck/"><button class="mdl-button mdl-js-button mdl-js-ripple-effect">Edit</button></a>
+          <input type="button" value="Delete" class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="warnDelete(card)"/>
         </div>
-
-      </form>
-
-    </div>
-  </div>
-
-  <!-- Card Preview -->
-  <div class="card-preview col-md-6">
-    <div class="mdl-card mdl-shadow--4dp">
-      <div class="mdl-card__supporting-text">
-        <div ng-bind-html="preview"></div>
       </div>
     </div>
+
+    <!-- Card Preview -->
+    <div class="card-preview col-md-6">
+      <div class="mdl-card mdl-shadow--4dp">
+        <div class="mdl-card__supporting-text">
+          <div ng-bind-html="preview"></div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
+  <!-- This just adds some space at the bottom so scrolling looks nice -->
+  <div class="deck-footer"></div>
 </div>
-
-<!-- This just adds some space at the bottom so scrolling looks nice -->
-<div class="deck-footer"></div>
