--- a/clients/sender/controllers/auth/login.html
+++ b/clients/sender/controllers/auth/login.html
@@ -1,46 +1,58 @@
-<div class="auth" ng-init='loggedIn()'>
-
-  <!-- Bootstrap Grid System -->
-  <div class="row">
-    <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-
-      <!-- Login Card - Material Design Lite -->
-      <form class="mdl-card mdl-shadow--4dp" ng-submit="login()">
-
-        <div class="mdl-card__title">
-          <h3 class="mdl-card__title-text">Login</h3>
-        </div>
-
-        <div class="mdl-card__supporting-text">
-
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" ng-model="username" type="text" id="login-username">
-            <label class="mdl-textfield__label" for="login-username">Username...</label>
-          </div>
-
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" ng-model="password" type="password" id="login-password">
-            <label class="mdl-textfield__label" for="login-username">Password...</label>
-          </div>
-
-          <!-- Warning Message -->
-          <div class="warning">{{ warning }}</div>
-
-        </div>
-
-        <div class="mdl-card__actions mdl-card--border">
-
-          <a href="#!/signup" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-            Create an account...
-          </a>
-          <input type="submit" value="Login" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"/>
-
-        </div>
-
-      </form>
-
-
+<div class="body-primary mdl-shadow--4dp">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+        <h1>CardCast</h1>
+      </div>
     </div>
   </div>
+</div>
 
+<div class="container" style="padding-top:15%;">
+  <div class="auth" ng-init='loggedIn()'>
+
+    <!-- Bootstrap Grid System -->
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+
+        <!-- Login Card - Material Design Lite -->
+        <form class="mdl-card mdl-shadow--4dp" ng-submit="login()">
+
+          <div class="mdl-card__title">
+            <h3 class="mdl-card__title-text">Login</h3>
+          </div>
+
+          <div class="mdl-card__supporting-text">
+
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" ng-model="username" type="text" id="login-username">
+              <label class="mdl-textfield__label" for="login-username">Username...</label>
+            </div>
+
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" ng-model="password" type="password" id="login-password">
+              <label class="mdl-textfield__label" for="login-username">Password...</label>
+            </div>
+
+            <!-- Warning Message -->
+            <div class="warning">{{ warning }}</div>
+
+          </div>
+
+          <div class="mdl-card__actions mdl-card--border">
+
+            <a href="#!/signup" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+              Create an account...
+            </a>
+            <input type="submit" value="Login" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"/>
+
+          </div>
+
+        </form>
+
+
+      </div>
+    </div>
+
+  </div>
 </div>
