--- a/clients/sender/index.html
+++ b/clients/sender/index.html
@@ -25,21 +25,7 @@
   </head>
   <body>
 
-    <div class="body-primary mdl-shadow--4dp">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-
-            <h1>CardCast</h1>
-
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <div ng-view class="container"></div>
+    <div ng-view></div>
 
     <!-- Load Angular controllers -->
     <script src="/sender/controllers/auth/auth.js"></script>
