--- a/clients/sender/controllers/deck/deck.html
+++ b/clients/sender/controllers/deck/deck.html
@@ -49,3 +49,8 @@
   <!-- This just adds some space at the bottom so scrolling looks nice -->
   <div class="deck-footer"></div>
 </div>
+
+<!-- Add Card Button -->
+<a ng-click="addCard()" class="add-card mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--accent mdl-shadow--4dp">
+  <i class="material-icons">add</i>
+</a>
