--- a/clients/sender/controllers/new/new.html
+++ b/clients/sender/controllers/new/new.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="mdl-card__supporting-text">
-        <p>This is where you create your new card. You can enter markdown into the text box and use the interactive preview to see how your card will look. After you are done press create card and then cast away! To learn more about markdown, visit this <a href="http://commonmark.org/help/">link</a>.</p>
+        <p>{{deck._id}}</p>
       </div>
 
     </div>
