BUG: edit button goes to an invalid url

--- a/clients/sender/controllers/main/main.html
+++ b/clients/sender/controllers/main/main.html
@@ -42,8 +42,7 @@
           <h3 class="mdl-card__title-text">{{ deck.title }}</h3>
         </div>
         <div class="mdl-card__actions mdl-card--border">
-
-          <a href="#!/deck/:{{deck._id}}"><button class="mdl-button mdl-js-button mdl-js-ripple-effect">Edit</button></a>
+          <a href="#!/deck/{{deck._id}}"><button class="mdl-button mdl-js-button mdl-js-ripple-effect">Edit</button></a>
           <input type="button" value="Delete" class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="warnDelete(deck)"/>
         </div>
 
