--- a/clients/sender/controllers/deck/deck.html
+++ b/clients/sender/controllers/deck/deck.html
@@ -8,7 +8,10 @@
 
         <div class="mdl-card__title">
           <h1 class="mdl-card__title-text">
-            {{deck.title}}
+            <div class="mdl-textfield mdl-js-textfield">
+              <input class="mdl-textfield__input" ng-model="deck.title" type="text" id="edit-deck-title">
+              <label class="mdl-textfield__label" for="edit-deck-title"></label>
+            </div>
             <button ng-click="goToDeck()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Back</button>
             <button ng-click="shareDeck()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Share</button>
             <button ng-click="logout()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Logout</button>
