--- a/clients/sender/controllers/edit/edit.html
+++ b/clients/sender/controllers/edit/edit.html
@@ -8,7 +8,7 @@
       <div class="mdl-card__title">
         <h1 class="mdl-card__title-text">
           Edit Card
-          <button ng-click="goToDeck()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">My Deck</button>
+          <button ng-click="goBack()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">My Deck</button>
           <button ng-click="logout()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Logout</button>
         </h1>
       </div>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="mdl-card__actions mdl-card--border">
-          <button ng-click="goToDeck()" type="button" class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect">Cancel</button>
+          <button ng-click="goBack()" type="button" class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect">Cancel</button>
           <input class="mdl-button mdl-button--accent mdl-button--raised mdl-js-button mdl-js-ripple-effect"
                  type="submit"
                  value="Save"/>
