--- a/clients/receiver/index.html
+++ b/clients/receiver/index.html
@@ -11,14 +11,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <link href="https://code.getmdl.io/1.3.0/material.teal-red.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link href="../assets/styles/receiver.css" rel="stylesheet" />
+    <link href="/assets/styles/receiver.css" rel="stylesheet" />
 
     <!-- Load Angular Modules and Markdown Compiler -->
     <!-- <script src="../assets/lib/material-design-lite/material.min.js"></script> -->
-    <script src="../assets/lib/angular/angular.min.js"></script>
-    <script src="../assets/lib/angular-route/angular-route.js"></script>
-    <script src="../assets/lib/angular-sanitize/angular-sanitize.js"></script>
-    <script src="../assets/lib/marked/lib/marked.js"></script>
+    <script src="/assets/lib/angular/angular.min.js"></script>
+    <script src="/assets/lib/angular-route/angular-route.js"></script>
+    <script src="/assets/lib/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/assets/lib/marked/lib/marked.js"></script>
     <!-- <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script> -->
   </head>
   <body>
@@ -33,7 +33,7 @@
     </div>
 
 
-    <!-- <script src="./app.js"></script> -->
-    <script src="./browserCast.js"></script>
+    <!-- <script src="/receiver/app.js"></script> -->
+    <script src="/receiver/browserCast.js"></script>
   </body>
 </html>
