--- a/clients/sender/controllers/deck/deck.html
+++ b/clients/sender/controllers/deck/deck.html
@@ -34,9 +34,7 @@
         <div class="mdl-card__actions mdl-card--border">
 
           <a href="#!/edit/{{card._id}}"><button class="mdl-button mdl-js-button mdl-js-ripple-effect">Edit</button></a>
-          <input type="button" value="Delete" class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="warnDelete(card)"/>
-          <button ng-click="setCurrent(card)" class="mdl-button mdl-js-button mdl-js-ripple-effect">CAST</button>
-
+          <input type="button" value="Delete" class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="deleteCard(card)"/>
         </div>
       </div>
     </div>
