cast button setting current

--- a/clients/sender/controllers/deck/deck.html
+++ b/clients/sender/controllers/deck/deck.html
@@ -35,6 +35,8 @@
 
           <a href="#!/edit/{{card._id}}"><button class="mdl-button mdl-js-button mdl-js-ripple-effect">Edit</button></a>
           <input type="button" value="Delete" class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="warnDelete(card)"/>
+          <button ng-click="setCurrent(card)" class="mdl-button mdl-js-button mdl-js-ripple-effect">CAST</button>
+
         </div>
       </div>
     </div>
