--- a/clients/receiver/index.html
+++ b/clients/receiver/index.html
@@ -34,6 +34,6 @@
 
 
     <!-- <script src="/receiver/app.js"></script> -->
-    <script src="/receiver/browserCast.js"></script>
+    <script src="/receiver/components/browserCast.js"></script>
   </body>
 </html>
