Bug fix: Markdown is rendering

--- a/clients/receiver/index.html
+++ b/clients/receiver/index.html
@@ -33,7 +33,7 @@
     </div>
 
 
-    <!-- <script src="/receiver/app.js"></script> -->
+    <!-- <script src="/receiver/components/app.js"></script> -->
     <script src="/receiver/components/browserCast.js"></script>
   </body>
 </html>
