--- a/clients/sender/controllers/deck/deck.html
+++ b/clients/sender/controllers/deck/deck.html
@@ -33,21 +33,19 @@
         <div class="mdl-card__actions mdl-card--border">
           <a href="#!/decks/card/{{card._id}}/edit"><button class="mdl-button mdl-js-button mdl-js-ripple-effect">Edit</button></a>
           <input type="button" value="Delete" class="mdl-button mdl-js-button mdl-js-ripple-effect" ng-click="deleteCard(card)"/>
-          <button ng-click="setCurrent(card)" class="mdl-button mdl-js-button mdl-js-ripple-effect">Cast</button>
+          <button ng-click="setCurrent(card)" 
+         class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+        >Cast</button>
         </div>
       </div>
     </div>
+    <div class="receiver-preview card-canvas-preview mdl-card mdl-shadow--6dp" ng-controller="ReceiverCtrl">
+      <div class="mdl-card__supporting-text">
 
-    <!-- Card Preview -->
-    <div class="card-preview col-md-8">
-      <div class="mdl-card mdl-shadow--4dp">
-        <div class="mdl-card__supporting-text">
-          <div ng-bind-html="preview"></div>
-        </div>
+        <!-- This is what actually gets cast to the screen -->
+        <div class="markdown" ng-bind-html="text"></div>
+
       </div>
-    </div>
-
-  </div>
 
   <!-- This just adds some space at the bottom so scrolling looks nice -->
   <div class="deck-footer"></div>
