--- a/clients/sender/controllers/receiver/receiver.html
+++ b/clients/sender/controllers/receiver/receiver.html
@@ -8,7 +8,9 @@
     <title>CardCast</title>
 
     <!-- Load Styling Assets -->
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+    <link href="https://code.getmdl.io/1.3.0/material.teal-red.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link href="/assets/styles/receiver.css" rel="stylesheet" />
 
   </head>
@@ -22,6 +24,4 @@
 
       </div>
     </div>
-    </body>
-    </html>
 
