--- a/clients/sender/controllers/cardEdit/cardEdit.html
+++ b/clients/sender/controllers/cardEdit/cardEdit.html
@@ -62,13 +62,7 @@
   </div>
 
   <!-- Card Preview -->
-  <div class="card-preview col-md-6">
-    <div class="mdl-card mdl-shadow--4dp">
-      <div class="mdl-card__supporting-text">
-        <div ng-bind-html="preview"></div>
-      </div>
-    </div>
-  </div>
+<preview></preview>
 
 </div>
 
