--- a/clients/sender/controllers/deck/deck.html
+++ b/clients/sender/controllers/deck/deck.html
@@ -13,6 +13,7 @@
           <button ng-click="goToDeck()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Back</button>
           <a href="#!/receiver/{{deck._id}}" target="_blank" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Projector</a>
           <button ng-click="logout()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Logout</button>
+  
         </div>
 
       </div>
@@ -32,21 +33,18 @@
           <button ng-click="setCurrent(card)" 
          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
         >Cast</button>
+
         </div>
       </div>
     </div>
 
-    <!--     preview of receiver --> 
-   <div class="receiver-preview card-canvas-preview mdl-card mdl-shadow--6dp" ng-controller="ReceiverCtrl">
-      <div class="mdl-card__supporting-text">
+    <!-- Card Preview -->
+    <preview></preview>
 
-        <!-- This is what actually gets cast to the screen -->
-        <div class="markdown" ng-bind-html="text"></div>
-
-      </div>
+  </div>
 
   <!-- This just adds some space at the bottom so scrolling looks nice -->
-  <div class="deck-footer"></div>
+  <renderData></renderData>
 </div>
 
 <!-- Add Card Button -->
