--- a/clients/sender/controllers/cardEdit/cardEdit.html
+++ b/clients/sender/controllers/cardEdit/cardEdit.html
@@ -44,7 +44,7 @@
                       ng-change="changes()"
                       id="edit-card-markdown"></textarea>
             <label class="mdl-textfield__label" for="edit-card-markdown"></label>
-            
+
           </div>
 
         </div>
@@ -60,10 +60,11 @@
 
     </div>
   </div>
-
-  <!-- Card Preview -->
-<preview></preview>
-
+  <div class="col-md-6">
+    <div class="card mdl-card mdl-shadow--4dp">
+      <projector content="text"></projector>
+    </div>
+  </div>
 </div>
 
 <!-- This just adds some space at the bottom so scrolling looks nice -->
