--- a/clients/sender/controllers/receiver/receiver.html
+++ b/clients/sender/controllers/receiver/receiver.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html ng-app="cardcast-receiver">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>CardCast</title>
-
-    <!-- Load Styling Assets -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
-    <link href="https://code.getmdl.io/1.3.0/material.teal-red.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link href="/assets/styles/receiver.css" rel="stylesheet" />
-
-  </head>
-  <body>
-
-    <div class="card-canvas mdl-card mdl-shadow--6dp" ng-controller="ReceiverCtrl">
-      <div class="mdl-card__supporting-text">
-
-        <!-- This is what actually gets cast to the screen -->
-        <div class="markdown" ng-bind-html="text"></div>
-
-      </div>
-    </div>
-
+<projector content="text"></projector>
