Fix preview for all the other views

--- a/clients/sender/controllers/deck/deck.html
+++ b/clients/sender/controllers/deck/deck.html
@@ -38,7 +38,7 @@
     </div>
   <div class="col-md-8">
     <div class="card mdl-card mdl-shadow--4dp" ng-controller="ReceiverCtrl">
-      <projector content="text"></projector>
+      <projector content="preview"></projector>
     </div>
   </div>
 
