--- a/clients/sender/controllers/edit/edit.html
+++ b/clients/sender/controllers/edit/edit.html
@@ -62,7 +62,7 @@
 
   <div class="col-md-6">
     <div class="card mdl-card mdl-shadow--4dp">
-      <projector content="text"></projector>
+      <projector content="preview"></projector>
     </div>
   </div>
 
