--- a/clients/sender/controllers/new/new.html
+++ b/clients/sender/controllers/new/new.html
@@ -58,7 +58,7 @@
 
   <div class="col-md-6">
     <div class="card mdl-card mdl-shadow--4dp">
-      <projector content="text"></projector>
+      <projector content="preview"></projector>
     </div>
   </div>
 
