--- a/clients/receiver/index.html
+++ b/clients/receiver/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <link href="https://code.getmdl.io/1.3.0/material.teal-red.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link href="/assets/styles/receiver.css" rel="stylesheet" />
+    <link href="/assets/styles/sender.css" rel="stylesheet" />
 
     <!-- Load Angular Modules and Markdown Compiler -->
     <script src="/assets/lib/material-design-lite/material.min.js"></script>
