--- a/clients/sender/controllers/cardEdit/cardEdit.html
+++ b/clients/sender/controllers/cardEdit/cardEdit.html
@@ -8,7 +8,7 @@
       <div class="mdl-card__title">
         <h1 class="mdl-card__title-text">
           Edit Card
-          <button ng-click="logout()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Logout</button>
+          <!-- <button ng-click="logout()" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised">Logout</button> -->
         </h1>
       </div>
 
